# LicensePlate

./: CMakeLists.txt  README.md  cameracontrol.cpp  cameracontrol.h  communationwitharduino.cpp  communationwitharduino.h  config.cpp  config.h  database.cpp  database.h  fingerdefinition.h  fingersetup.cpp  fingersetup.h  httprequest.cpp  httprequest.h  imageprocessing.cpp  imageprocessing.h  logger.cpp  logger.h  main.cpp  main.qml  surfacemanager.cpp  surfacemanager.h
config/: setting.ini  setup.sh
database/: LicensePlate.db  LicensePlate.sqbpro  data.sqlite
